--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,13 @@ services:
       context: .
     ports:
       - '3000:3000'
+    env_file: .env
     depends_on: 
-      - db
+      - postgres
 
-  db:
-    container_name: db
-    hostname: db
+  postgres:
+    container_name: postgres
+    hostname: postgres
     image: 'postgres:13'
     ports:
       - '5432:5432'
