--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "fastify": "^3.15.0"
+    "fastify": "^3.15.0",
+    "fastify-postgres": "^3.5.0",
+    "pg": "^8.6.0"
   }
 }
