--- a/.env-example
+++ b/.env-example
@@ -1,5 +1,5 @@
 POSTGRES_USER=francesco
 POSTGRES_PASSWORD=xxxxxxx
 POSTGRES_DB=fastifydb
-POSTGRES_SERVICE=db
+POSTGRES_SERVICE=postgres
 POSTGRES_PORT=5432
