--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start":"docker-compose up --build",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "inbackend":"docker exec -it fastify_backend bash",
     "psql": "docker exec -it postgres psql -U francesco fastifydb"
   },
   "keywords": [],
